# rofi-calendar

./: .gitignore  Cargo.toml  README.md
src/: calendar.rs  main.rs  rofi.rs
