[package]
name = "rofi-calendar"
version = "0.1.1"
edition = "2021"
readme = "README.md"
authors = ["Aleksey Astafiev <aastafiev@gmail.com>"]
license = "GPL-3"
description = "A minimal calendar pop up in rofi when clicking the date blocklet"
homepage = "https://github.com/aastafiev/rofi-calendar"
repository = "https://github.com/aastafiev/rofi-calendar"
keywords = ["calendar", "rofi", "i3blocks"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
env_logger = "0.10.1"
log = "0.4.20"
